test/functions/deitz/iterators/test_var_iterator5_error.good
test_var_iterator5_error.chpl:8: error: illegal lvalue in assignment
